--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-    <title>Smokers Express</title>
+    <title>Smokers Paradise</title>
   </head>
   <body>
 
 <div class = "container">
   <nav class="navbar navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Navbar</a>
+
+  <a class="navbar-brand" href="#">Welcome to Smokers Paradise</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -23,7 +24,7 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Services</a>
+        <a class="nav-link" href="#">Products</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Locate Us</a>
@@ -34,11 +35,9 @@
     </ul>
   </div>
 </nav>
-<<<<<<< HEAD
+
 </br>
-=======
-<br />
->>>>>>> a71146107c65f71480a561e269ef9de7ce0ea8de
+
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -66,6 +65,8 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+
 
 </div>
 
