add map - working and products page -incomplete

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1542186754" />
+<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
+<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
+<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+<script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
 
     <title>Smokers Paradise</title>
   </head>
@@ -36,13 +41,11 @@
     </ul>
   </div>
 </nav>
-<<<<<<< HEAD
+
 <br />
-=======
 
-</br>
 
->>>>>>> 39997fbeb6c6349863053a59b1c0b53e0f58f379
+
 
 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -71,11 +74,8 @@
   </a>
 </div>
 
-<<<<<<< HEAD
-<div id="map"></div>
-=======
->>>>>>> 39997fbeb6c6349863053a59b1c0b53e0f58f379
-
+<br />
+ <div id="map" style="width: 50%; height: 300px; background: grey" />
 
 </div>
 
@@ -85,10 +85,7 @@
 
 
 
-<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvNYF3hqdoScAhkYhjejAd6osX1tIe_d4&callback=initMap"
- type="text/javascript">
-</script>
-
+    <script src = "map.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
