--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
-
     <title>Smokers Paradise</title>
   </head>
   <body>
@@ -75,8 +74,20 @@
 </div>
 
 <br />
- <div id="map" style="width: 50%; height: 300px; background: grey" />
+<div class = "row">
+    <div id="map" style="width:65%; height: 380px; background: grey"> </div>
 
+  <ul class="list-group" style = "margin-left: 10px;">
+    <li class="list-group-item disabled list-group-flush" aria-disabled="true">Store Hours</li>
+    <li class="list-group-item">Sunday | 9 AM to 9 PM</li>
+    <li class="list-group-item">Monday | 9 AM to 9 PM</li>
+    <li class="list-group-item">Tuesday | 9 AM to 9 PM</li>
+    <li class="list-group-item">Wednesday | 9 AM to 9 PM</li>
+    <li class="list-group-item">Thursday | 9 AM to 9 PM</li>
+    <li class="list-group-item">Friday | 9 AM to 9 PM</li>
+    <li class="list-group-item">Saturday | 9 AM to 9 PM</li>
+</ul>
+</div>
 </div>
 
 
