--- a/products.html
+++ b/products.html
@@ -7,51 +7,53 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="index.css">
 
     <title>Products</title>
   </head>
   <body>
 
-<div class = "container fluid">
+<div class = "container-fluid">
   <h2> Liquors </h2>
-  <br />
   <div class = "row">
 
-    <div class = "col-lg-3 col-md-4 col-sm-6">
+    <div class = "col-lg-3 col-md-6 col-sm-12 c">
       <div class="card" style="width: 18rem;">
-          <img src="images/liquors/bur.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/bur.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">Some quick example .</p>
             </div>
       </div>
     </div>
 
-    <div class = "col-lg-3 col-md-4 col-sm-6">
-      <div class="card" style="width: 18rem;">
-          <img src="images/liquors/jag.jpg" class="card-img-top" alt="...">
+    <div class = "col-lg-3 col-md-6 col-sm-12">
+      <div class="card c" style="width: 18rem;">
+          <img src="images/liquors/jag.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">make up the</p>
             </div>
       </div>
     </div>
 
-    <div class = "col-lg-3 col-md-4 col-sm-6">
-      <div class="card" style="width: 18rem;">
-          <img src="images/liquors/ked.jpg" class="card-img-top" alt="...">
+    <div class = "col-lg-3 col-md-6 col-sm-12">
+      <div class="card c" style="width: 18rem;">
+          <img src="images/liquors/ked.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> to build on</p>
             </div>
       </div>
     </div>
 
-    <div class = "col-lg-3 col-md-4 col-sm-6">
-      <div class="card" style="width: 18rem;">
-          <img src="images/liquors/spi.jpg" class="card-img-top" alt="...">
+    <div class = "col-lg-3 col-md-6 col-sm-12 ">
+      <div class="card c" style="width: 18rem;">
+          <img src="images/liquors/spi.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text"> bulk of the </p>
             </div>
       </div>
     </div>
+
+
 
 
   </div>
