--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <script src="jquery.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
@@ -11,12 +12,15 @@
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+
     <title>Smokers Paradise</title>
+
   </head>
   <body>
 
-<div class = "container">
-  <nav class="navbar navbar-dark bg-dark">
+
+  <nav class="navbar navbar-dark bg-dark fixed-top">
+    <div class = "container">
 
   <a class="navbar-brand" href="#">Welcome to Smokers Paradise</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,20 +33,24 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Products</a>
+        <a class="nav-link" href="products.html">Products</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Locate Us</a>
+        <a class="nav-link" href="#locateUS">Locate Us</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">Chat with us</a>
       </li>
     </ul>
+
   </div>
-</nav>
+  </div>
+    </nav>
+
+
+  <div class = "container">
 
 <br />
-
 
 
 
@@ -51,16 +59,24 @@
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/sm.jpg" alt="First slide">
+      <img class="d-block w-100" src="images/outside/1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sm1.jpg" alt="Second slide">
+      <img class="d-block w-100" src="images/cig.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/sm2.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/outside/chips.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/outside/3.jpg" alt="Third slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="images/outside/4.jpg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -74,10 +90,13 @@
 </div>
 
 <br />
-<div class = "row">
-    <div id="map" style="width:65%; height: 380px; background: grey"> </div>
+<div class = "row" id="locateUS">
 
-  <ul class="list-group" style = "margin-left: 10px;">
+
+
+    <div id="map" class="col-lg-6 col-md-6 col-sm-12" > </div>
+
+  <ul class="list-group col-lg-6 col-md-6 col-sm-12 text-center">
     <li class="list-group-item disabled list-group-flush" aria-disabled="true">Store Hours</li>
     <li class="list-group-item">Sunday | 9 AM to 9 PM</li>
     <li class="list-group-item">Monday | 9 AM to 9 PM</li>
@@ -87,7 +106,13 @@
     <li class="list-group-item">Friday | 9 AM to 9 PM</li>
     <li class="list-group-item">Saturday | 9 AM to 9 PM</li>
 </ul>
+
+
+
+<script src = "map.js"></script>
 </div>
+
+
 </div>
 
 
@@ -96,7 +121,10 @@
 
 
 
-    <script src = "map.js"></script>
+
+
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
