--- a/products.html
+++ b/products.html
@@ -7,48 +7,83 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
-
+<link rel="stylesheet" type="text/css" href="products.css">
     <title>Products</title>
   </head>
   <body>
 
-<div class = "container-fluid">
-  <h2> Liquors </h2>
+    <nav class="navbar navbar-dark bg-dark fixed-top">
+      <div class = "container">
+
+    <a class="navbar-brand" href="#">Welcome to Smokers Paradise</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="products.html">Products</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="index.html#locateUS">Locate Us</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Chat with us</a>
+        </li>
+      </ul>
+
+    </div>
+    </div>
+      </nav>
+
+<div class = "container" style="padding-top:10%;">
+
+
+
+  <h2> Spirits </h2>
+  <br />
   <div class = "row">
 
-    <div class = "col-lg-3 col-md-6 col-sm-12 c">
-      <div class="card" style="width: 18rem;">
-          <img src="images/liquors/bur.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width: 200px;">
+          <img src="images/liquors/1.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">Some quick example .</p>
+              <h5 class="card-title">Scotch</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
       </div>
     </div>
 
-    <div class = "col-lg-3 col-md-6 col-sm-12">
-      <div class="card c" style="width: 18rem;">
-          <img src="images/liquors/jag.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width: 200px;">
+          <img src="images/liquors/Cognac.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text">make up the</p>
+              <h5 class="card-title">Cognac</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
       </div>
     </div>
 
-    <div class = "col-lg-3 col-md-6 col-sm-12">
-      <div class="card c" style="width: 18rem;">
-          <img src="images/liquors/ked.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width:200px;">
+          <img src="images/liquors/brandy.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text"> to build on</p>
+              <h5 class="card-title">Brandy</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
       </div>
     </div>
 
-    <div class = "col-lg-3 col-md-6 col-sm-12 ">
-      <div class="card c" style="width: 18rem;">
-          <img src="images/liquors/spi.jpg" class="card-img-top sm-img img-thumbnail img-fluid" alt="...">
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width: 200px;">
+          <img src="images/liquors/vodka.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-                <p class="card-text"> bulk of the </p>
+              <h5 class="card-title">Vodka</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
       </div>
     </div>
@@ -57,18 +92,165 @@
 
 
   </div>
+
+
+<hr class ="new">
+
+<h2> Red, White, and Others</h2>
+<br />
+<div class = "row">
+
+  <div class = "col-lg-3 col-md-4 col-sm-6">
+    <div class="card" style="width: 200px;">
+        <img src="images/liquors/redwine.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Red</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+    </div>
+  </div>
+
+  <div class = "col-lg-3 col-md-4 col-sm-6">
+    <div class="card" style="width: 200px;">
+        <img src="images/liquors/whitewine.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">White</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+    </div>
+  </div>
+
+  <div class = "col-lg-3 col-md-4 col-sm-6">
+    <div class="card" style="width:200px;">
+        <img src="images/liquors/pinkwine.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Pink</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+    </div>
+  </div>
+
+  <div class = "col-lg-3 col-md-4 col-sm-6">
+    <div class="card" style="width: 200px;">
+        <img src="images/liquors/sparkling.jpg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Sparkling</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          </div>
+    </div>
+  </div>
 </div>
 
 
 
+  <hr class ="new">
+
+  <h2> VAPS and E-cigarettes</h2>
+  <br />
+  <div class = "row">
+
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width: 200px;">
+          <img src="images/liquors/juul.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Juul</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+      </div>
+    </div>
+
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width: 200px;">
+          <img src="images/liquors/vaps.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Vaps</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+      </div>
+    </div>
+
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width:200px;">
+          <img src="images/liquors/ejuices.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">E-Juice</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+      </div>
+    </div>
+
+    <div class = "col-lg-3 col-md-4 col-sm-6">
+      <div class="card" style="width: 200px;">
+          <img src="images/liquors/juuls.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Juul started kit</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+      </div>
+    </div>
+
+</div>
+
+    <hr class ="new">
+
+    <h2> ICE COLD BEER </h2>
+    <br/>
+    <div class = "row">
+
+      <div class = "col-lg-3 col-md-4 col-sm-6">
+        <div class="card" style="width: 200px;">
+            <img src="images/liquors/bur.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Red</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+        </div>
+      </div>
+
+      <div class = "col-lg-3 col-md-4 col-sm-6">
+        <div class="card" style="width: 200px;">
+            <img src="images/liquors/jag.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">White</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+        </div>
+      </div>
+
+      <div class = "col-lg-3 col-md-4 col-sm-6">
+        <div class="card" style="width:200px;">
+            <img src="images/cig.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Pink</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+        </div>
+      </div>
+
+      <div class = "col-lg-3 col-md-4 col-sm-6">
+        <div class="card" style="width: 200px;">
+            <img src="images/liquors/spi.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Sparkling</h5>
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+        </div>
+      </div>
+
+
+</div>
+
+
+</div>
+
+</div>
 
 
 
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
   </body>
 </html>
