--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <a class="nav-link" href="#locateUS">Locate Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Chat with us</a>
+        <a class="nav-link" href="#con_ar">Chat with us</a>
       </li>
     </ul>
 
@@ -47,14 +47,11 @@
   </div>
     </nav>
 
-
   <div class = "container">
 
 <br />
 
-
-
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -94,11 +91,12 @@
 
 
 
-    <div id="map" class="col-lg-6 col-md-6 col-sm-12" > </div>
+    <div id="map" class="col-lg-8 col-md-6 col-sm-12" style="height:400px;"> </div>
 
-  <ul class="list-group col-lg-6 col-md-6 col-sm-12 text-center">
-    <li class="list-group-item disabled list-group-flush" aria-disabled="true">Store Hours</li>
-    <li class="list-group-item">Sunday | 9 AM to 9 PM</li>
+
+  <ul class="list-group col-lg-4 col-md-6 col-sm-12 text-center list-group-flush">
+    <li class="list-group-item active " aria-disabled="true">Store Hours</li>
+    <li class="list-group-item ">Sunday | 9 AM to 9 PM</li>
     <li class="list-group-item">Monday | 9 AM to 9 PM</li>
     <li class="list-group-item">Tuesday | 9 AM to 9 PM</li>
     <li class="list-group-item">Wednesday | 9 AM to 9 PM</li>
@@ -107,24 +105,41 @@
     <li class="list-group-item">Saturday | 9 AM to 9 PM</li>
 </ul>
 
-
-
 <script src = "map.js"></script>
 </div>
 
+<div class = "row contact_area" id="con_ar">
+  <div class = "col-sm-6 contact_email shadow p-3 mb-5 bg-white rounded">
+    <h2 class = "text-center"> Leave a feedback </h2>
+    <form>
 
+  <div class="form-row ">
+
+    <div class="form-group col-md-6">
+      <label>Name</label>
+      <input type="text" class="form-control"  placeholder="Enter your name">
+    </div>
+
+    <div class="form-group col-md-6">
+      <label for="inputEmail4">Email</label>
+      <input type="Enter your email" class="form-control" id="inputEmail4" placeholder="Email">
+    </div>
+
+  </div>
+
+  <div class="form-group">
+    <div class="form-group">
+   <label for="exampleFormControlTextarea1">Please type in the feedback</label>
+   <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+ </div>
+  </div>
+
+  <button type="submit" class="btn btn-primary btn-block">Send</button>
+</form>
+  </div>
 </div>
 
-
-
-
-
-
-
-
-
-
-
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
