--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100" src="images/outside/1.jpg" alt="First slide">
+      <img class="d-block w-100" src="images/outside/1.JPG" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/cig.jpg" alt="Second slide">
+      <img class="d-block w-100" src="images/cig.JPG" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/outside/chips.jpg" alt="Second slide">
+      <img class="d-block w-100" src="images/outside/chips.JPG" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/outside/3.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/outside/3.JPG" alt="Third slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/outside/4.jpg" alt="Third slide">
+      <img class="d-block w-100" src="images/outside/4.JPG" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
