--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <img class="d-block w-100" src="images/outside/1.JPG" alt="First slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="images/cig.JPG" alt="Second slide">
+      <img class="d-block w-100" src="images/cig.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100" src="images/outside/chips.JPG" alt="Second slide">
