--- a/products.html
+++ b/products.html
@@ -50,7 +50,7 @@
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
       <div class="card" style="width: 200px;">
-          <img src="images/liquors/1.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/1.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Scotch</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -60,7 +60,7 @@
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
       <div class="card" style="width: 200px;">
-          <img src="images/liquors/Cognac.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/Cognac.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Cognac</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -70,7 +70,7 @@
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
       <div class="card" style="width:200px;">
-          <img src="images/liquors/brandy.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/brandy.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Brandy</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -80,7 +80,7 @@
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
       <div class="card" style="width: 200px;">
-          <img src="images/liquors/vodka.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/vodka.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Vodka</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -102,7 +102,7 @@
 
   <div class = "col-lg-3 col-md-4 col-sm-6">
     <div class="card" style="width: 200px;">
-        <img src="images/liquors/redwine.jpg" class="card-img-top" alt="...">
+        <img src="images/liquors/redwine.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Red</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -112,7 +112,7 @@
 
   <div class = "col-lg-3 col-md-4 col-sm-6">
     <div class="card" style="width: 200px;">
-        <img src="images/liquors/whitewine.jpg" class="card-img-top" alt="...">
+        <img src="images/liquors/whitewine.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">White</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -122,7 +122,7 @@
 
   <div class = "col-lg-3 col-md-4 col-sm-6">
     <div class="card" style="width:200px;">
-        <img src="images/liquors/pinkwine.jpg" class="card-img-top" alt="...">
+        <img src="images/liquors/pinkwine.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Pink</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -132,7 +132,7 @@
 
   <div class = "col-lg-3 col-md-4 col-sm-6">
     <div class="card" style="width: 200px;">
-        <img src="images/liquors/sparkling.jpg" class="card-img-top" alt="...">
+        <img src="images/liquors/sparkling.JPG" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">Sparkling</h5>
               <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -151,7 +151,7 @@
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
       <div class="card" style="width: 200px;">
-          <img src="images/liquors/juul.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/juul.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Juul</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -161,7 +161,7 @@
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
       <div class="card" style="width: 200px;">
-          <img src="images/liquors/vaps.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/vaps.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Vaps</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -171,7 +171,7 @@
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
       <div class="card" style="width:200px;">
-          <img src="images/liquors/ejuices.jpg" class="card-img-top" alt="...">
+          <img src="images/liquors/ejuices.JPG" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">E-Juice</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
