--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <script src="jquery.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="index.css">
+
     <link rel="stylesheet" type="text/css" href="https://js.api.here.com/v3/3.0/mapsjs-ui.css?dp-version=1542186754" />
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-core.js"></script>
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-service.js"></script>
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-ui.js"></script>
 <script type="text/javascript" src="https://js.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+<link rel="stylesheet" href="index.css">
 
     <title>Smokers Paradise</title>
 
@@ -19,18 +21,18 @@
   <body>
 
 
-  <nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class = "container">
+    <nav class="navbar navbar-expand-lg  navbar-light bg-light fixed-top" id ="navbar">
+    <div class="container">
+      <a class="navbar-brand" href="#">Smokers Express</a>
 
-  <a class="navbar-brand" href="#">Welcome to Smokers Paradise</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="products.html">Products</a>
@@ -39,15 +41,19 @@
         <a class="nav-link" href="#locateUS">Locate Us</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#con_ar">Chat with us</a>
+        <a class="nav-link" href="#">Contact Us</a>
       </li>
-    </ul>
 
-  </div>
-  </div>
-    </nav>
 
-  <div class = "container">
+
+
+
+        </ul>
+      </div>
+    </div>
+   </nav>
+
+
 
 <br />
 
@@ -86,31 +92,39 @@
   </a>
 </div>
 
+
 <br />
+<div id="maps">
+
+<div class = "container">
+  <h2 class="locate"><span  class="line-center">Find Us</span></h2>
 <div class = "row" id="locateUS">
 
 
 
-    <div id="map" class="col-lg-8 col-md-6 col-sm-12" style="height:400px;"> </div>
+    <div id="map" class="col-lg-12" style="height:400px;"> </div>
 
-
-  <ul class="list-group col-lg-4 col-md-6 col-sm-12 text-center list-group-flush">
-    <li class="list-group-item active " aria-disabled="true">Store Hours</li>
-    <li class="list-group-item ">Sunday | 9 AM to 9 PM</li>
-    <li class="list-group-item">Monday | 9 AM to 9 PM</li>
-    <li class="list-group-item">Tuesday | 9 AM to 9 PM</li>
-    <li class="list-group-item">Wednesday | 9 AM to 9 PM</li>
-    <li class="list-group-item">Thursday | 9 AM to 9 PM</li>
-    <li class="list-group-item">Friday | 9 AM to 9 PM</li>
-    <li class="list-group-item">Saturday | 9 AM to 9 PM</li>
+</div>
+</div>
+</div>
+<div class ="hours">
+  <ul class="list-group text-center container">
+<h2 class="locate"><span  class="line-center">Store Hours</span></h2>
+    <li style="padding:10px;">Sunday - 10 AM to 10 PM</li>
+    <li style="padding:10px;">Monday-Saturday - 7 AM to 12 AM</li>
+    <li> Please visit us on Facebook </li>
 </ul>
 
 <script src = "map.js"></script>
 </div>
+</div>
+<div class="container">
 
+
+<h2 class="locate"><span  class="line-center">Feedback</span></h2>
 <div class = "row contact_area" id="con_ar">
   <div class = "col-sm-6 contact_email shadow p-3 mb-5 bg-white rounded">
-    <h2 class = "text-center"> Leave a feedback </h2>
+    <h2 class = "text-center"> Leave us a feedback </h2>
     <form>
 
   <div class="form-row ">
