--- a/products.html
+++ b/products.html
@@ -6,46 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="products.css">
-    <title>Products</title>
+   
+   
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
+   <link rel="stylesheet" type="text/css" href="products.css">
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+    
+	<title>Products</title>
   </head>
   <body>
 
-    <nav class="navbar navbar-dark bg-dark fixed-top">
-      <div class = "container">
+    <nav class="navbar navbar-expand-md fixed-top" id ="navbar">
 
-    <a class="navbar-brand" href="#">Welcome to Smokers Paradise</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+      
+    <img class ="image" src="images/logo2 copy.jpg" >
+  
+ 
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="products.html">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="index.html#locateUS">Locate Us</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Chat with us</a>
-        </li>
-      </ul>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <i class="fas fa-bars"></i>
+	<span class="navbar-toggler-icon"></span>
+  </button>
 
-    </div>
-    </div>
-      </nav>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+	  
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="products.html">Products  </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html#locateUS">Locate Us  </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html#contactUS">Contact Us  </a>
+      </li>
 
-<div class = "container" style="padding-top:10%;">
+
+
+
+
+        </ul>
+      </div>
+  
+  </nav>
+
+
+
+<div class = "container" id = "main" style="padding-top:10%;">
 
 
 
   <h2> Spirits </h2>
   <br />
+
   <div class = "row">
 
     <div class = "col-lg-3 col-md-4 col-sm-6">
@@ -89,7 +106,7 @@
     </div>
 
 
-
+</div>
 
   </div>
 
